vimrc, zshrc, nvim init.vim, coc-settings

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,8 +1,9 @@
 {
     "diagnostic.errorSign": "✘",
     "diagnostic.warningSign": "⚠",
-    "metals.statusBarEnabled": true,
     "diagnostic.checkCurrentLine": true,
-    "python.jediEnabled": false
+    "python.jediEnabled": false,
+    "metals.statusBarEnabled": true,
+    "codeLens.enable": true
 }
 
